# Mages

./: .gitignore  CHANGELOG.md  README.md  settings.gradle.kts
.github/workflows/: create-vendored-tarball.yml  deploy-wasm.yml  release-android.yml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/java/org/mlm/mages/: MagesApp.kt  MainActivity.kt
androidApp/src/main/java/org/mlm/mages/activities/: BubbleConversationActivity.kt  DistributorPickerActivity.kt  IncomingCallActivity.kt  ShareReceiverActivity.kt
fastlane/metadata/android/en-US/changelogs/: 751.txt  791.txt  801.txt  811.txt  881.txt  901.txt  911.txt
gradle/: libs.versions.toml
packaging/: io.github.mlm_games.mages.metainfo.xml
rust/: Cargo.toml  uniffi.wasm.toml
rust/src/: core.rs  errors.rs  lib.rs  macros.rs  platform.rs  types.rs  verification_flow.rs  wasm_bridge.rs
rust/uniffi-bindgen/: Cargo.toml
shared/: build.gradle.kts
shared/src/androidMain/kotlin/org/mlm/mages/accounts/: BrowserAccountStorage.kt
shared/src/androidMain/kotlin/org/mlm/mages/matrix/: MatrixPort.android.kt
shared/src/androidMain/kotlin/org/mlm/mages/platform/: AndroidBrowserAuthCoordinator.android.kt  AppLocale.android.kt  CallWebView.android.kt  ClipboardAttachmentHandler.android.kt  DragDrop.android.kt  LiveLocationProvider.android.kt  Notifier.android.kt  Platform.android.kt
shared/src/androidMain/kotlin/org/mlm/mages/push/: AppNotificationChannels.kt  AppPushService.kt  BubbleEligibilityEvaluator.kt  ConversationShortcutPublisher.kt  NotificationActionReceiver.kt  NotificationAvatarHelper.kt  NotificationEnrichWorker.kt  Notifier.kt  PushManager.kt  PushReconciler.kt
shared/src/commonMain/composeResources/values/: strings.xml
shared/src/commonMain/composeResources/values-es/: strings.xml
shared/src/commonMain/kotlin/org/mlm/mages/: App.kt  MatrixService.kt  Model.kt
shared/src/commonMain/kotlin/org/mlm/mages/accounts/: AccountStore.kt  BrowserAccountStorage.kt  MatrixClients.kt
shared/src/commonMain/kotlin/org/mlm/mages/matrix/: MatrixPort.kt
shared/src/commonMain/kotlin/org/mlm/mages/nav/: MatrixLinkActions.kt  MatrixLinks.kt  Navigator.kt
shared/src/commonMain/kotlin/org/mlm/mages/platform/: AppLocale.kt  CallWebView.kt  DragDrop.kt  LiveLocationProvider.kt  LiveLocationSession.kt  Notifier.kt  Platform.kt  SessionBootstrapper.kt  ShareContent.kt
shared/src/commonMain/kotlin/org/mlm/mages/settings/: AppLanguage.kt  SettingsDefinition.kt
shared/src/commonMain/kotlin/org/mlm/mages/storage/: AvatarLoader.kt
shared/src/commonMain/kotlin/org/mlm/mages/ui/: GlobalCallOverlay.kt  UiStates.kt
shared/src/commonMain/kotlin/org/mlm/mages/verification/: VerificationCoordinator.kt
shared/src/jvmMain/java/org/mlm/mages/matrix/: MatrixPort.jvm.kt
shared/src/jvmMain/java/org/mlm/mages/platform/: AppLocale.jvm.kt  CallWebView.jvm.kt  ClipboardAttachmentHandler.jvm.kt  DragDrop.jvm.kt  Notifier.jvm.kt  Platform.jvm.kt
shared/src/jvmMain/kotlin/org/mlm/mages/platform/: LiveLocationProvider.jvm.kt
shared/src/wasmJsMain/kotlin/org/mlm/mages/matrix/: MatrixPort.web.kt  (+4 more)
shared/src/wasmJsMain/resources/wasm/: client_builder.js  mages_bridge.js  mages_ffi_client.js  mages_ffi_init.js  session_store.js  web_matrix_facade.js
shared/src/wasmJsMain/resources/wasm/runtime/: generated_runtime.js  runtime_client_factory.js  runtime_room_list.js  runtime_session_store.js  runtime_sync.js  runtime_timeline.js  runtime_types.js
webApp/: build.gradle.kts
webApp/src/wasmJsMain/kotlin/: main.kt
webApp/src/wasmJsMain/resources/: index.html
(+59 files in other folders)
