[package]
name = "mages_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["."]

[dependencies]
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

uniffi = { version = "0.31.0", features = ["wasm-unstable-single-threaded"] }
uniffi_bindgen = "0.31.0"

getrandom = { version = "0.2.17", features = ["js"] }

blake3 = "1"
uuid = { version = "1", features = ["v4"] }
mime = "0.3"
js_int = "0.2"
thiserror = "2"
futures-util = "0.3"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
web-time = "1.1"
async-stream = "0.3.6"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
matrix-sdk = { version = "0.16.0", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "bundled-sqlite",
    "rustls-tls",
    "sso-login",
    "automatic-room-key-forwarding",
    "experimental-search",
    "experimental-widgets",
    # "uniffi",
] }
matrix-sdk-ui = { version = "0.16.0", default-features = false }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
matrix-sdk = { version = "0.16.0", default-features = false, features = [
    "e2e-encryption",
    "indexeddb",
    "rustls-tls",
    # "sso-login",  # Disabled - pulls in axum -> doesn't support wasm
    "automatic-room-key-forwarding",
    # "experimental-search",  # Disabled - tantivy -> fs4 -> rustix -> errno, no wasm support
    "experimental-widgets",
] }
matrix-sdk-ui = { version = "0.16.0", default-features = false, features = [
    "js",
] }
# tokio fs feautre - not supported on wasm
tokio = { version = "1", features = ["rt", "macros", "time"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Location",
    "Window",
    "Document",
    "Storage",
] }
gloo-timers = "0.3"
# getrandom 0.3 with wasm_js feature - needed for imbl 6.x -> rand_core 0.9 -> getrandom 0.3
getrandom = { version = "0.3", features = ["wasm_js"] }
# Disable gzip/brotli/zstd to avoid tower-http -> tokio -> mio
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }

[build-dependencies]
getrandom = "0.2.17"
uniffi = { version = "0.31.0", features = ["build"] }
uniffi_bindgen = "0.31.0"

[patch.crates-io]
matrix-sdk = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "main" }
matrix-sdk-base = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "main" }
matrix-sdk-common = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "main" }
matrix-sdk-crypto = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "main" }
matrix-sdk-sqlite = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "main" }
matrix-sdk-store-encryption = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "main" }
matrix-sdk-ui = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "main" }
matrix-sdk-search = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "main" }
matrix-sdk-indexeddb = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "main" }
